--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 .webgl {
-  height: 100%;
-  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
 }
